--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class="calculator">
             <div class="calculator-body">
-                <div class="display"></div>
+                <div class="display">0</div>
                 <div class="buttons">
                     <div class="btnC btnr1">
                         <input type="button" value="C" onclick="reset()">
