Changed how the display works and added a pressed change to the buttons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <body>
         <div class="calculator">
             <div class="calculator-body">
-                <div class="display">0</div>
+                <div class="display">
+                    <div class="result">0</div>
+                </div>
                 <div class="buttons">
                     <div class="btnC btnr1">
                         <input type="button" value="C" onclick="reset()">
