--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div>
+            <h1>Simple calculator</h1>
+        </div>
         <div class="calculator">
             <div class="calculator-body">
                 <div class="display">
@@ -78,10 +81,6 @@
                 </div>
             </div>
         </div>
-
-
-
-
         <script src="javascript.js" async defer></script>
     </body>
 </html>
