--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div>
-            <h1>Simple calculator</h1>
+            <h1>Simple Calculator</h1>
         </div>
         <div class="calculator">
             <div class="calculator-body">
